--- a/build.html
+++ b/build.html
@@ -48,11 +48,11 @@
         color:"rgb(88, 172, 250)",
         defaults: {             
             name: {value:""},   
-            builddirname : {value:"build-ci"}, 
-            projectname : {value:"doxs"},
-            workspace : {value:"C:/Users/INUFOUM/workspace/"},
-            branch : {value:"map"},
-            giturl : {value:"ssh://git@ibgite01.srv-ib.ibp:443/itg/dox-services.git"}
+            builddirname : {value:"tempdir"}, 
+            projectname : {value:"myproject"},
+            workspace : {value:"directory"},
+            branch : {value:"master"},
+            giturl : {value:"myproject.git"}
         },
         inputs:1,               
         outputs:1,              
