--- a/deploy.html
+++ b/deploy.html
@@ -43,10 +43,10 @@
         color:"rgb(255, 99, 175)",
         defaults: {             
             name: {value:""},   
-            deploydir : {value:"C:/Users/INUFOUM/workspace/deploy"}, 
-            projectname : {value:"doxs"},
-            branch : {value:"map"},
-            giturl : {value:"ssh://git@ibgite01.srv-ib.ibp:443/itg/dox-services.git"}
+            deploydir : {value:"deploydir"}, 
+            projectname : {value:"myproject"},
+            branch : {value:"master"},
+            giturl : {value:"ssh://git@host:port/project/project.git"}
         },
         inputs:1,               
         outputs:1,              
